--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,10 +2,10 @@ set -g default-terminal "screen-256color"
 # set -g mouse-mode on
 set-window-option -g xterm-keys on
 setw -g mode-keys vi
-#set -g set-titles on
+set -g set-titles on
 # set-option -g allow-rename off
 # set-option -g default-command "reattach-to-user-namespace -l zsh"
-#set -g default-shell $SHELL 
+set -g default-shell /usr/local/bin/zsh
 #set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 set -g prefix `
@@ -39,14 +39,18 @@ set -g status-fg white
 #set -g status-left '#[fg=red]#H'
 
 # Highlight active window
-set-window-option -g window-status-current-bg red
+# set-window-option -g window-status-current-bg red
+set -g mode-style fg=white,bg=red
 
 #set -g status-right #[fg=yellow]#(uptime)
 #set -g status-right '%a %b %d, %Y %H:%M'
 
 bind-key a set-window-option synchronize-panes
 
-set -g status-left '#[fg=red]#H#[default]'
+set -g window-status-format '[#[fg=red,bg=default]#I: #W]'
+set -g status-left '#[fg=red]#h #P'
 set -g status-right '#[default] #[fg=cyan,bold]%Y-%m-%d %H:%M:%S#[default]'
+set -g status-justify centre
+set -g window-status-separator ' - '
 #set -g status-right "#[fg=yellow]#(cut -d ' ' -f 1-4 /proc/loadavg)#[default] #[fg=cyan,bold]%Y-%m-%d %H:%M:%S#[default]"
 #set -g status-right "#[default] #[fg=cyan,bold]%Y-%m-%d %H:%M:%S#[default]"
