--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -47,7 +47,8 @@ set -g mode-style fg=white,bg=red
 
 bind-key a set-window-option synchronize-panes
 
-set -g window-status-format '[#[fg=red,bg=default]#I: #W]'
+set -g window-status-format '#[fg=red,bg=default]#I: #W'
+set -g window-status-current-format '#[fg=white,bg=blue][#I: #W]'
 set -g status-left '#[fg=red]#h #P'
 set -g status-right '#[default] #[fg=cyan,bold]%Y-%m-%d %H:%M:%S#[default]'
 set -g status-justify centre
